# QuickPrice

./: .env.example  .gitattributes  .gitignore  .python-version  Caddyfile  README.md  admin-auth.env.example  provider-keys.env.example  pyproject.toml
.github/workflows/: ci.yml
deploy/: caddy.env.example
deploy/systemd/: caddy-quickprice.conf  quickprice.service  quickprice.tmpfiles.conf
docs/: instrument-catalog.md  operations.md
examples/: QuickPrice.pq  quickprice.sh
examples/reverse-proxy/: Caddyfile  nginx.conf
scripts/: backup_sqlite.py  build_python314t.sh  hash_api_key.py  load_test.py  smoke_test.py
src/quickprice/: __init__.py  __main__.py  admin_account.py  admin_api.py  admin_security.py  analytics.py  api.py  api_keys.py  auth.py  builtin_plugin.py  cache.py  catalog.py  catalog_runtime.py  collectors.py  config.py  dashboard_logs.py  domain.py  equities.py  fx.py  instrument_policy.py  managed_config.py  market.py  metrics.py  plugin_api.py  provider_factory.py  registry.py  runtime.py  schemas.py  service.py  staking.py
tests/: conftest.py  helpers.py  load_fixture_app.py  test_admin_account.py  test_admin_api.py  test_admin_frontend.py  test_admin_security.py  test_analytics.py  test_api.py  test_api_keys.py  test_auth.py  test_cache.py  test_catalog.py  test_catalog_runtime.py  test_cli.py  test_collector_reconciliation.py  test_collectors.py  test_config.py  test_dashboard.py  test_managed_config.py  test_operational_logging.py  test_provider_metrics.py  test_registry.py  test_runtime.py  test_service_persistence.py  test_staking.py
(+70 files in other folders)
