[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "quickprice"
version = "1.6.0"
description = "A private, cache-first market data service for Excel Power Query"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
dependencies = [
  "aiohttp>=3.13,<4",
  "fastapi>=0.136,<1",
  "pydantic>=2.12,<3",
  "tzdata>=2026.1",
  "uvicorn>=0.41,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
]

[project.scripts]
quickprice = "quickprice.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quickprice"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]
